# mansys

./: .gitignore  .style.yapf  README.md  StudentsInformationSystem_PyQt.sln  main.py  msg.py  学生信息管理系统_pyqt5.sln
Gui/: baseGui.py  delGui.py  enterGui.py  helpGui.py  loginGui.py  mainGui.py  registerGui.py
StuInfo_C/: CMakeLists.txt  README.md  main.c  utility.c
StuInfo_C/menu/: addnew.h  changeone.h  deleteone.c  searchone.h  start.h
StuInfo_PyQt5/: README.md  data.py  requirements.txt
stuinfo_c/: CMakeLists.txt  README.md
stuinfo_c/lib/sqlite_3310100/: CMakeLists.txt
stuinfo_c/menu/: changeone.c
stuinfo_c/src/: main.c
stuinfo_c/src/menu/: addnew.c  addnew_menu.c  changeone_menu.c  deleteone.h  deleteone_menu.c  searchone.c  searchone_menu.c  start.c  start_menu.c
stuinfo_c/src/utility/: utility.h
stuinfo_cpp/: CMakeLists.txt  README.md  main.cpp
stuinfo_cpp/src/: main.cpp
stuinfo_cpp/src/utility/: utility.cpp  utility.h
stuinfo_pyqt5/: README.md  data.py  pack.spec  requirements.txt
stuinfo_pyqt5/Gui/: baseGui.py  delGui.py  enterGui.py  helpGui.py  loginGui.py  mainGui.py  registerGui.py
学生信息管理系统/: data.py  main.py  msg.py  requirements.txt  学生信息管理系统.pyproj
学生信息管理系统/Gui/: baseGui.py  delGui.py  enterGui.py  helpGui.py  loginGui.py  mainGui.py  registerGui.py
学生信息管理系统/env/: pip-selfcheck.json  pyvenv.cfg
学生信息管理系统/env/Scripts/: Activate.ps1  _asyncio_d.pyd  _bz2_d.pyd  _ctypes_d.pyd  _ctypes_test_d.pyd  _decimal_d.pyd  _elementtree_d.pyd  _hashlib_d.pyd  _lzma_d.pyd  _msi_d.pyd  _multiprocessing_d.pyd  _overlapped_d.pyd  _socket_d.pyd  _sqlite3_d.pyd  _ssl_d.pyd  _testbuffer_d.pyd  _testcapi_d.pyd  _testconsole_d.pyd  _testimportmultiple_d.pyd  _testmultiphase_d.pyd  _tkinter_d.pyd  activate  activate.bat  pyexpat_d.pyd  select_d.pyd  unicodedata_d.pyd  winsound_d.pyd
